src/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,500;0,600;0,700;1,500&display=swap');

.App {
    max-width: 1200px;
    margin: auto;
    padding: 20px 0;
}

.Header{
    color: white;
    font-family: "Roboto Mono";
    text-align: center;
    margin-bottom: 70px;
    margin-top: 68px;
}

h1, h2, h3, p {
    color: white;
    margin-left: 10px;
}

h1 {
    font-size: 25px;
    margin-bottom: 20px;
    margin-top: 20px;
}

h2 {
    font-size: 20px;
}

h3 {
    font-size: 15px;
}

p {
    font-size: 1rem;
}

.logo {
    height: 50px;
}

.Button {
    display: flex;
    align-items: center;
    background-color: black;
    justify-content: center;
    margin: 20px 0 20px 0;
    height: 50px;
    border-radius: 50px;
    border: 3px solid white;
    text-decoration: none;
    transition: all .2s ease-in-out;
}

.Button:hover {
    transform: scale(1.05);
}

.Button_text {
    font-size: 15px;
    margin-left: 15px;
    font-family: "Roboto Mono";
    font-weight: 500;
    color: white;
}

.Profile {
    height: 150px;
    border-radius: 125px;
}

.Icon {
    height: 30px;
}

a:hover {
    color: purple;
}

a {
    text-decoration: none;
    cursor: pointer;
}

.Button_Container {
    padding: 0 40px;
}

.list {
    list-style-type: none;
    padding-left: 0;
}

li {
    color: white;
}

.Card {
    padding: 0 30px;
    text-align: center;
}

.Card__content {

}

.Card__image {
    height: 150px;
}

.collapsible__content {
    opacity: 0;
    max-height: 0;
    overflow: hidden;
    transition: all .3s;
}

.collapsible--expanded .collapsible__content {
    max-height: 100vh;
    opacity: 1;
}

.nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    margin-bottom: 40px;
    background-color: #01073d;
    position: fixed;
    width: 100%;
    top: 0;
}

.nav__logo {
    padding-left: 10px;
}

.nav__toggler {
    background-color: transparent;
    border: 0;
    cursor: pointer;
    transition: border .3s;
}

.nav__toggler:hover {
    border: 1px solid white;
    border-radius: 15px;
}

.nav__list {
    width: 100%;
    margin: 0;
}

.nav__item {
    border-bottom: 1px solid white;
    padding: 15px;
    font-family: "Roboto Mono";
}

.nav__item > a {
    color: white;
    transition: color .3s;
}

.nav__item > a:hover {
    color: dodgerblue;
}

.Contact__heading {
    margin-top: 68px;
}

.Contact__text {
    margin-bottom: 10px;
}

.Contact__link {
    margin-top: 10px;
}

.About__section {
    padding: 0 30px;
    margin-bottom: 50px;
    margin-top: 68px;
}

.Skills__heading {
    padding-left: 30px;
}

.Skills__container {
    display: grid;
    row-gap: 20px;
    flex-direction: column;
}

.Blog__heading {
    margin-bottom: 50px;
    margin-top: 68px;
}

.Project__section {
    padding: 0 20px;
}

.Project__item {
    list-style: none;
    margin-bottom: 40px;
    padding-left: 0;
}

.Project__heading {
    margin-bottom: 20px;
}

.Project__text {
    margin: 10px;
}

.Project__link {
    padding-left: 10px;
}

@media screen and (min-width: 768px) {

    h1 {
        font-size: 35px;
    }

    h2 {
        font-size: 30px;
    }

    h3 {
        font-size: 25px;
    }

    p {
        font-size: 20px;
    }

    .Button {
        height: 60px;
    }
  
    .Button_Container {
        margin: auto;
        max-width: 700px;
    }

    .Button_text {
        font-size: 20px;
    }

    .Icon {
        height: 45px;
    }

    .Profile {
        height: 200px;
    }

    .nav__toggler {
        display: none;
    }

    .nav__list {
        width: auto;
        display: flex;
        opacity: 1;
        max-height: 100%;
        justify-content: space-between;
    }

    .nav__item {
        border: 0;
        padding: 20px;
    }

    .nav__item > a {
        font-size: 20px;
    }

    .Card {
        display: flex;
        padding: 0;
    }

    .Card__header {
        display: flex;
        flex-direction: column;
        justify-content: center;
    }

    .Card__content {
        text-align: left;
        padding-left: 30px;
        padding-top: 20px;
    }

    .Skills__container .Card {
        padding: 0 30px;
    }


}

@media screen and (min-width: 1200px) {

    .Card {
        display: block;
    }

    .Card__header {
        display: block;
    }

    .Skills__container {
        display: flex;
        flex-direction: row;
        column-gap: 20px;
    }


}

